# dynamica_vision

./: README.md  req_custom.txt
background_removal/: CMakeLists.txt
background_removal/src/: background1_removal (copy).cpp  background1_removal.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/background_removal/share/background_removal/: package.bash  package.zsh
install/yolov8_ros/lib/yolov8_ros/: debug_node  detect_3d_node  tracking_node  yolov8_node
install/yolov8_ros/share/yolov8_ros/: package.sh
log/: latest_build
src/background_removal/: package.xml
src/background_removal/src/: background2_removal.cpp
src/closest_point/: CMakeLists.txt  package.xml
src/closest_point/src/: closest_point.cpp
src/depth2pcl/: CMakeLists.txt  package.xml
src/depth2pcl/depth2pcl/launch/: depth2pcl.launch
src/depth2pcl/depth2pcl/src/: depth2pcl.cpp  depth2pcl1.cpp
src/depth2pcl/src/: depth2pcl2.cpp
src/get_tf/: CMakeLists.txt  package.xml
src/get_tf/src/: get_tf.cpp
src/pcl_merging/: CMakeLists.txt  package.xml
src/pcl_merging/src/: pcl_merging.cpp
