<?xml version="1.0"?>
<package format="2">
  <name>pcl_merging</name>
  <version>0.5.0</version>
  <description>A simple node to convert a depth image and camera info into a PointCloud2.</description>
  <maintainer email="clalancette@osrfoundation.org">Chris Lalancette</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pcl-dev</buildtool_depend>
  
  <depend>image_geometry</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
    
    
    
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
